fixed overflow-x scroll on small screen

--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -181,7 +181,7 @@
         position: relative;
         height: 600px;
         overflow: scroll;
-        overflow-y: scroll;
+        overflow-x: hidden;
         -webkit-overflow-scrolling: touch;
     }
     
